# tnqg

./: .gitignore  CITATION.cff  README.md  setup.cfg
data/benchmarks/1d/: N=40_h=0.1.txt  N=40_h=1.txt  N=40_h=2.txt
data/benchmarks/2d/: N=6x6_h=2.txt  N=6x6_h=3.044.txt  N=6x6_h=5.txt  N=6x6_observable_inft
data/qmc/: N=6x6.txt  N=8x8.txt
data/tnqg/1d/N=40/: psi0_N=40.mpack
data/tnqg/1d/N=40/h=0.1/: Emin.txt  observable.txt  params_0.mpack  params_1.mpack  params_2.mpack  params_3.mpack  params_4.mpack  params_5.mpack  params_6.mpack
data/tnqg/1d/N=40/h=1/: Emin.txt  observable.txt  params_0.mpack  params_1.mpack  params_2.mpack  params_3.mpack  params_4.mpack  params_5.mpack  params_6.mpack
data/tnqg/1d/N=40/h=2/: Emin.txt  observable.txt  params_0.mpack  params_1.mpack  params_2.mpack  params_3.mpack  params_4.mpack  params_5.mpack  params_6.mpack
data/tnqg/2d/N=6x6/: loss_inft.txt  observable_inft.txt  psi0_N=6x6.mpack
data/tnqg/2d/N=6x6/h=2/: Emin.txt  learning_curves.txt  loss.txt  observable.txt  optimized_state_0.mpack  optimized_state_1.mpack  optimized_state_2.mpack  (+7 more)
data/tnqg/2d/N=8x8/: loss_inft.txt  observable_inft.txt  psi0_N=8x8.mpack
data/tvmc/: N=6x6_h=hc.txt  N=8x8_h=hc.txt
scripts/: estimate_matrices.py  lvm.py  main.py  vmc.py
test/: _finite_diff.py  exact_loss.py  test_loss.py
tnqg/: __init__.py
tnqg/models/: __init__.py  ansatz.py  distribution.py
tnqg/operator/: __init__.py  exact.py  expect.py  operator.py
tnqg/sampling/: __init__.py  rules.py
tnqg/utils/: __init__.py  custom_hilbert.py  has_leaf_extra.py
(+61 files in other folders)
