[metadata]
name = tnqg
version = 0.0.1
description = time-dependent neural quantum galerkin method
author = Alessandro Sinibaldi
license = Apache-2.0

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    jax
    jaxlib
    netket
    flax

[options.packages.find]
where = .